feat: add fully user logic
