# src/routes/user/users/entities/user.entity.ts
@@ -1,4 +1,12 @@
-export class User {
+interface IUser {
+  id: string; // uuid v4
+  login: string;
+  password: string;
+  version: number; // integer number, increments on update
+  createdAt: number; // timestamp of creation
+  updatedAt: number; // timestamp of last update
+}
+export class User implements IUser {
   id: string; // uuid v4
   login: string;
   password: string;
